# PicoLightShow

./: CMakeLists.txt  README.md  development_guide.md  hardware_setup.md  lwipopts.h  main.cpp  makefsdata.bat  software_setup.md  web_fsdata.c
include/: constants.h  types.h
include/helpers/: string_helper.h
include/light_effects/: color_change.h  custom_pattern.h  jans_ping_pong.h  light_effect_base.h  running_point.h
include/light_show_runner/: light_show_runner.h
include/persistent_settings/: persistent_settings.h
include/www_server/: cgi.h  ssi.h  www_server.h
releases/: PicoLightShow-0.9.1.uf2  PicoLightShow-0.9.2.uf2
src/helpers/: string_helper.cpp
src/light_effects/: color_change.cpp  custom_pattern.cpp  jans_ping_pong.cpp  light_effect_base.cpp  running_point.cpp
src/light_show_runner/: light_show_runner.cpp
src/persistent_settings/: persistent_settings.cpp
src/www_server/: cgi.cpp  ssi.cpp  www_server.cpp
wwwRoot/: change_color_setup.shtml  connection_setup.shtml  custom_pattern_setup.shtml  fail.html  index.html  led_control.shtml  led_effect_setup.shtml  main.js  success.html
